@@ -9,12 +9,12 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import javax.transaction.Transactional;
 
 import org.apache.commons.lang3.StringUtils;
 import org.elasticsearch.common.util.set.Sets;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import uk.gov.hmcts.ccd.data.caseaccess.CachedCaseRoleRepository;
 import uk.gov.hmcts.ccd.data.caseaccess.CachedCaseUserRepository;
 import uk.gov.hmcts.ccd.data.caseaccess.CaseRoleRepository;
@@ -72,11 +72,18 @@ public class CaseAccessOperation {
         caseUserRepository.revokeAccess(Long.valueOf(caseDetails.getId()), userId, CREATOR.getRole());
     }
 
+    @Transactional
     public List<String> findCasesUserIdHasAccessTo(final String userId) {
-        return caseUserRepository.findCasesUserIdHasAccessTo(userId)
-            .stream()
-            .map(databaseId -> caseDetailsRepository.findById(databaseId).getReference() + "")
-            .collect(Collectors.toList());
+        List<Long> usersCases = caseUserRepository.findCasesUserIdHasAccessTo(userId);
+        if (usersCases.isEmpty()) {
+            return List.of();
+        } else {
+            return caseDetailsRepository
+                .findCaseReferencesByIds(usersCases)
+                .stream()
+                .map(String::valueOf)
+                .collect(Collectors.toList());
+        }
     }
 
     @Transactional
@@ -87,7 +94,7 @@ public class CaseAccessOperation {
 
         validateCaseRoles(Sets.union(globalCaseRoles, validCaseRoles), targetCaseRoles);
 
-        final Long caseId = new Long(caseDetails.getId());
+        final Long caseId = Long.valueOf(caseDetails.getId());
         final String userId = caseUser.getUserId();
         final List<String> currentCaseRoles = caseUserRepository.findCaseRoles(caseId, userId);
 
@@ -229,7 +236,9 @@ public class CaseAccessOperation {
             cauRolesByCaseId.entrySet().stream()
             .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().stream()
                 // filter out no organisation_id
-                .filter(caseUserRole -> StringUtils.isNoneBlank(caseUserRole.getOrganisationId()))
+                .filter(caseUserRole ->
+                        StringUtils.isNoneBlank(caseUserRole.getOrganisationId())
+                            && !caseUserRole.getCaseRole().equalsIgnoreCase(CREATOR.getRole()))
                 .collect(Collectors.toList())))
             // filter cases that have no remaining roles
             .entrySet().stream().filter(e -> !e.getValue().isEmpty())
